Refactor codebase with modern Java 17 features and convert config to YAML
- Use var, streams, text blocks, String.formatted(), and isBlank() in ProductService
- Remove @Autowired on single-constructor class
- Use method reference for shutdown hook in McpServerApplication
- Replace sequential saves with List.of() + saveAll() in DataInitializer
- Replace manual constructors with Lombok @NoArgsConstructor in Product
- Convert application.properties to application.yml
- Fix SonarQube issues: extract text blocks from lambdas, use %n in format strings