@@ -3,10 +3,9 @@ package com.ezcloud.mcp.server.service;
 import com.ezcloud.mcp.server.entity.Product;
 import com.ezcloud.mcp.server.repository.ProductRepository;
 import org.springframework.ai.tool.annotation.Tool;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
-import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * Service class that exposes product inventory operations as MCP tools.
@@ -28,13 +27,6 @@ public class ProductService {
 
     private final ProductRepository productRepository;
 
-    /**
-     * Constructor injection of the ProductRepository.
-     * Spring automatically injects the JPA repository implementation.
-     *
-     * @param productRepository The repository for product data access
-     */
-    @Autowired
     public ProductService(ProductRepository productRepository) {
         this.productRepository = productRepository;
     }
@@ -51,22 +43,16 @@ public class ProductService {
             "Returns a formatted list of all products with their details " +
             "including ID, name, category, price, and stock quantity.")
     public String getAllProducts() {
-        // Fetch all products from the database
-        List<Product> products = productRepository.findAll();
-
-        // Build a human-readable response string
-        StringBuilder result = new StringBuilder();
-        result.append(String.format("Found %d products:\n\n", products.size()));
-
-        // Format each product's details
-        for (Product product : products) {
-            result.append(String.format("- %s (ID: %d)\n", product.getName(), product.getId()));
-            result.append(String.format("  Category: %s\n", product.getCategory()));
-            result.append(String.format("  Price: $%.2f\n", product.getPrice()));
-            result.append(String.format("  Stock: %d units\n\n", product.getStock()));
-        }
-
-        return result.toString();
+        var products = productRepository.findAll();
+        var format = """
+                - %s (ID: %d)
+                  Category: %s
+                  Price: $%.2f
+                  Stock: %d units
+                """;
+        return products.stream()
+                .map(p -> format.formatted(p.getName(), p.getId(), p.getCategory(), p.getPrice(), p.getStock()))
+                .collect(Collectors.joining("%n".formatted(), "Found %d products:%n%n".formatted(products.size()), ""));
     }
 
     /**
@@ -82,26 +68,18 @@ public class ProductService {
             "Returns all products that match the specified category (case-sensitive). " +
             "Common categories include: Electronics, Books, Clothing, Appliances.")
     public String searchByCategory(String category) {
-        // Query products matching the specified category
-        List<Product> products = productRepository.findByCategory(category);
+        var products = productRepository.findByCategory(category);
 
-        // Handle case when no products match
         if (products.isEmpty()) {
-            return String.format("No products found in category '%s'.", category);
+            return "No products found in category '%s'.".formatted(category);
         }
 
-        // Build response with matching products
-        StringBuilder result = new StringBuilder();
-        result.append(String.format("Found %d products in category '%s':\n\n",
-                products.size(), category));
-
-        for (Product product : products) {
-            result.append(String.format("- %s (ID: %d) - $%.2f - Stock: %d\n",
-                    product.getName(), product.getId(), product.getPrice(),
-                    product.getStock()));
-        }
-
-        return result.toString();
+        return products.stream()
+                .map(p -> "- %s (ID: %d) - $%.2f - Stock: %d".formatted(
+                        p.getName(), p.getId(), p.getPrice(), p.getStock()))
+                .collect(Collectors.joining("%n".formatted(),
+                        "Found %d products in category '%s':%n%n".formatted(products.size(), category),
+                        "%n".formatted()));
     }
 
     /**
@@ -117,24 +95,18 @@ public class ProductService {
             "Useful for finding budget-friendly options or products within a price range. " +
             "Price should be specified as a decimal number (e.g., 50.00).")
     public String findProductsUnderPrice(double maxPrice) {
-        // Query products with price less than the specified maximum
-        List<Product> products = productRepository.findByPriceLessThan(maxPrice);
+        var products = productRepository.findByPriceLessThan(maxPrice);
 
-        // Handle case when no products are under the price
         if (products.isEmpty()) {
-            return String.format("No products found under $%.2f.", maxPrice);
+            return "No products found under $%.2f.".formatted(maxPrice);
         }
 
-        // Build response with matching products
-        StringBuilder result = new StringBuilder();
-        result.append(String.format("Found %d products under $%.2f:\n\n", products.size(), maxPrice));
-
-        for (Product product : products) {
-            result.append(String.format("- %s - $%.2f (%s) - Stock: %d\n",
-                    product.getName(), product.getPrice(), product.getCategory(), product.getStock()));
-        }
-
-        return result.toString();
+        return products.stream()
+                .map(p -> "- %s - $%.2f (%s) - Stock: %d".formatted(
+                        p.getName(), p.getPrice(), p.getCategory(), p.getStock()))
+                .collect(Collectors.joining("%n".formatted(),
+                        "Found %d products under $%.2f:%n%n".formatted(products.size(), maxPrice),
+                        "%n".formatted()));
     }
 
     /**
@@ -153,11 +125,10 @@ public class ProductService {
             "Requires: name (product name), category (product category), price (decimal price), " +
             "and stock (integer quantity). Returns confirmation with the created product details.")
     public String addProduct(String name, String category, double price, int stock) {
-        // Validate input parameters before creating the product
-        if (name == null || name.trim().isEmpty()) {
+        if (name == null || name.isBlank()) {
             return "Error: Product name cannot be empty.";
         }
-        if (category == null || category.trim().isEmpty()) {
+        if (category == null || category.isBlank()) {
             return "Error: Product category cannot be empty.";
         }
         if (price < 0) {
@@ -167,17 +138,16 @@ public class ProductService {
             return "Error: Product stock cannot be negative.";
         }
 
-        // Create and save the new product
-        Product product = new Product(name, category, price, stock);
-        Product saved = productRepository.save(product);
+        var product = new Product(name, category, price, stock);
+        var saved = productRepository.save(product);
 
-        // Return confirmation with the saved product details (includes generated ID)
-        return String.format("Product added successfully!\n" +
-                        "ID: %d\n" +
-                        "Name: %s\n" +
-                        "Category: %s\n" +
-                        "Price: $%.2f\n" +
-                        "Stock: %d units",
+        return """
+                Product added successfully!
+                ID: %d
+                Name: %s
+                Category: %s
+                Price: $%.2f
+                Stock: %d units""".formatted(
                 saved.getId(), saved.getName(),
                 saved.getCategory(), saved.getPrice(), saved.getStock());
     }
@@ -199,29 +169,27 @@ public class ProductService {
             "Requires the product ID and new values for name, category, price, and stock. " +
             "All fields are required even if only updating one field.")
     public String updateProduct(Long id, String name, String category, double price, int stock) {
-        // Try to find the product and update it, or return error if not found
+        var format = """
+                Product updated successfully!
+                ID: %d
+                Name: %s
+                Category: %s
+                Price: $%.2f
+                Stock: %d units""";
         return productRepository.findById(id)
                 .map(product -> {
-                    // Update all product fields
                     product.setName(name);
                     product.setCategory(category);
                     product.setPrice(price);
                     product.setStock(stock);
 
-                    // Save the updated product
-                    Product updated = productRepository.save(product);
+                    var updated = productRepository.save(product);
 
-                    // Return confirmation with updated details
-                    return String.format("Product updated successfully!\n" +
-                                    "ID: %d\n" +
-                                    "Name: %s\n" +
-                                    "Category: %s\n" +
-                                    "Price: $%.2f\n" +
-                                    "Stock: %d units",
+                    return format.formatted(
                             updated.getId(), updated.getName(), updated.getCategory(),
                             updated.getPrice(), updated.getStock());
                 })
-                .orElse(String.format("Error: Product with ID %d not found.", id));
+                .orElse("Error: Product with ID %d not found.".formatted(id));
     }
 
     /**
@@ -235,15 +203,13 @@ public class ProductService {
     @Tool(description = "Deletes a product from the inventory by its ID. " +
             "Returns confirmation of deletion or error if product not found.")
     public String deleteProduct(Long id) {
-        // Try to find the product and delete it, or return error if not found
         return productRepository.findById(id)
                 .map(product -> {
-                    // Delete the product from the database
                     productRepository.delete(product);
-                    return String.format("Product '%s' (ID: %d) deleted successfully.",
+                    return "Product '%s' (ID: %d) deleted successfully.".formatted(
                             product.getName(), product.getId());
                 })
-                .orElse(String.format("Error: Product with ID %d not found.", id));
+                .orElse("Error: Product with ID %d not found.".formatted(id));
     }
 
 }
